--- a/src/engine/ruleset/integrations/aws/decoders/aws-json.yml
+++ b/src/engine/ruleset/integrations/aws/decoders/aws-json.yml
@@ -14,7 +14,7 @@ metadata:
     name: Wazuh, Inc.
     date: 2023/05/04
 
-sources:
+parents:
   - decoder/integrations/0
 
 # TODO: wodle output should be fixed
