--- a/src/engine/ruleset/integrations/f5/decoders/f5-afm.yml
+++ b/src/engine/ruleset/integrations/f5/decoders/f5-afm.yml
@@ -13,7 +13,7 @@ metadata:
   references:
     - https://support.f5.com/csp/article/K05327372
 
-sources:
+parents:
   - decoder/integrations/0
 
 #TODO: Once the events arrive tagged, uncomment these lines below
