--- a/src/engine/ruleset/integrations/sonicwall/decoders/sonicwall-syslog.yml
+++ b/src/engine/ruleset/integrations/sonicwall/decoders/sonicwall-syslog.yml
@@ -15,7 +15,7 @@ metadata:
     - https://datatracker.ietf.org/doc/html/rfc3164
     - https://datatracker.ietf.org/doc/html/rfc5424
 
-sources:
+parents:
   - decoder/integrations/0
 
 parse:
