--- a/src/engine/ruleset/integrations/sophos/decoders/sophos-utm.yml
+++ b/src/engine/ruleset/integrations/sophos/decoders/sophos-utm.yml
@@ -12,7 +12,7 @@ metadata:
   references:
     - https://www.sophos.com/en-us/support/documentation/sophos-utm
 
-sources:
+parents:
   - decoder/integrations/0
 
 check:
