--- a/src/engine/ruleset/wazuh-core/decoders/core-secure.yml
+++ b/src/engine/ruleset/wazuh-core/decoders/core-secure.yml
@@ -14,7 +14,7 @@ metadata:
   references:
     - https://documentation.wazuh.com/current/development/message-format.html#secure-message-format
 
-sources:
+parents:
   - decoder/core-wazuh-message/0
 
 check:
