--- a/src/engine/ruleset/wazuh-core/decoders/enrichment/kvdb-agent-update.yml
+++ b/src/engine/ruleset/wazuh-core/decoders/enrichment/kvdb-agent-update.yml
@@ -15,7 +15,7 @@ metadata:
   versions:
     - ""
 
-sources:
+parents:
   - decoder/dbsync-host-data/0
   - decoder/syscollector-dbsync-host-data/0
 
