--- a/src/engine/ruleset/integrations/aws/decoders/aws-elb.yml
+++ b/src/engine/ruleset/integrations/aws/decoders/aws-elb.yml
@@ -21,7 +21,7 @@ metadata:
       url: https://wazuh.com
       date: 2023/06/20
 
-sources:
+parents:
   - decoder/aws-json/0
 
 check: +string_equal/~json.aws.source/alb OR +string_equal/~json.aws.source/elb OR +string_equal/~json.aws.source/nlb
