--- a/src/engine/ruleset/integrations/f5/decoders/f5-apm.yml
+++ b/src/engine/ruleset/integrations/f5/decoders/f5-apm.yml
@@ -13,7 +13,7 @@ metadata:
   references:
     - https://techdocs.f5.com/kb/en-us/products/big-ip_apm/manuals/product/apm-network-access-12-1-0/10.html
 
-sources:
+parents:
   - decoder/integrations/0
 
 #TODO: Once the events arrive tagged, uncomment these lines below
