--- a/src/engine/ruleset/integrations/fortinet/decoders/fortinet-client-endpoint.yml
+++ b/src/engine/ruleset/integrations/fortinet/decoders/fortinet-client-endpoint.yml
@@ -12,7 +12,7 @@ metadata:
   references:
     - https://docs.fortinet.com/document/forticlient/7.0.2/log-message-reference/327109
 
-sources:
+parents:
   - decoder/integrations/0
 
 check:
