--- a/src/engine/ruleset/integrations/fortinet/decoders/fortinet-fortimanager.yml
+++ b/src/engine/ruleset/integrations/fortinet/decoders/fortinet-fortimanager.yml
@@ -12,7 +12,7 @@ metadata:
   references:
     - https://docs.fortinet.com/document/fortimanager/7.2.1/log-message-reference/683345/introduction
 
-sources:
+parents:
   - decoder/integrations/0
 
 check:
