--- a/src/engine/ruleset/integrations/mysql/decoders/mysql-slowlog.yml
+++ b/src/engine/ruleset/integrations/mysql/decoders/mysql-slowlog.yml
@@ -17,7 +17,7 @@ metadata:
     - https://dev.mysql.com/doc/refman/5.7/en/slow-query-log.html
     - https://dev.mysql.com/doc/refman/8.0/en/slow-query-log.html
 
-sources:
+parents:
   - decoder/integrations/0
 
 check:
