--- a/src/engine/ruleset/integrations/nginx/decoders/nginx-error.yml
+++ b/src/engine/ruleset/integrations/nginx/decoders/nginx-error.yml
@@ -12,7 +12,7 @@ metadata:
       url: https://wazuh.com
       date: 2023/01/13
 
-sources:
+parents:
   - decoder/integrations/0
 
 #TODO: Once the events arrive tagged, uncomment these lines below
