--- a/src/engine/ruleset/integrations/postgresql/decoders/postgresql-csv.yml
+++ b/src/engine/ruleset/integrations/postgresql/decoders/postgresql-csv.yml
@@ -16,7 +16,7 @@ metadata:
     name: Wazuh Inc. info@wazuh.com
     date: 2023-01-05
 
-sources:
+parents:
   - decoder/integrations/0
 
 #TODO: Once the events arrive tagged, uncomment these lines below
