--- a/src/engine/ruleset/integrations/sonicwall/decoders/sonicwall-firewall-generated.yml
+++ b/src/engine/ruleset/integrations/sonicwall/decoders/sonicwall-firewall-generated.yml
@@ -12,7 +12,7 @@ metadata:
   references:
     - https://www.sonicwall.com/es-mx/support/technical-documentation
 
-sources:
+parents:
   - decoder/integrations/0
 
 check:
