--- a/src/engine/ruleset/integrations/sophos/decoders/sophos-waf.yml
+++ b/src/engine/ruleset/integrations/sophos/decoders/sophos-waf.yml
@@ -12,7 +12,7 @@ metadata:
   references:
     - https://support.sophos.com/support/s/?language=en_US#t=DocumentationTab
 
-sources:
+parents:
   - decoder/integrations/0
 
 check:
