--- a/src/engine/ruleset/integrations/syslog/decoders/syslog.yml
+++ b/src/engine/ruleset/integrations/syslog/decoders/syslog.yml
@@ -15,7 +15,7 @@ metadata:
     - https://www.ietf.org/rfc/rfc3164.txt
     - https://www.ietf.org/rfc/rfc5424.txt
 
-sources:
+parents:
   - decoder/integrations/0
 
 parse:
