--- a/src/engine/ruleset/integrations/wazuh-indexer/decoders/wazuh-indexer-task-plain.yml
+++ b/src/engine/ruleset/integrations/wazuh-indexer/decoders/wazuh-indexer-task-plain.yml
@@ -16,7 +16,7 @@ metadata:
     - "https://documentation.wazuh.com/current/getting-started/components/wazuh-indexer.html"
     - "https://opensearch.org/docs/latest/monitoring-your-cluster/logs/"
 
-sources:
+parents:
   - decoder/integrations/0
 
 # TODO: Once the events arrive tagged, uncomment following lines
