--- a/src/engine/ruleset/wazuh-core/decoders/core-ciscat.yml
+++ b/src/engine/ruleset/wazuh-core/decoders/core-ciscat.yml
@@ -15,7 +15,7 @@ metadata:
   references:
     - https://documentation.wazuh.com/current/user-manual/capabilities/policy-monitoring/ciscat/ciscat.html
 
-sources:
+parents:
   - decoder/core-wazuh-message/0
 
 check:
