--- a/src/engine/ruleset/wazuh-core/decoders/core-localfile.yml
+++ b/src/engine/ruleset/wazuh-core/decoders/core-localfile.yml
@@ -15,7 +15,7 @@ metadata:
   references:
     - https://documentation.wazuh.com/current/development/message-format.html
 
-sources:
+parents:
   - decoder/core-wazuh-message/0
 
 check:
