--- a/src/engine/ruleset/wazuh-core/decoders/core-syscollector.yml
+++ b/src/engine/ruleset/wazuh-core/decoders/core-syscollector.yml
@@ -14,7 +14,7 @@ metadata:
   references:
     - https://documentation.wazuh.com/current/user-manual/reference/ossec-conf/wodle-syscollector.html
 
-sources:
+parents:
   - decoder/core-wazuh-message/0
 
 check:
