--- a/src/engine/ruleset/wazuh-core/decoders/core-windows.yml
+++ b/src/engine/ruleset/wazuh-core/decoders/core-windows.yml
@@ -15,7 +15,7 @@ metadata:
   references:
     - https://documentation.wazuh.com/current/user-manual/capabilities/log-data-collection/how-to-collect-wlogs.html
 
-sources:
+parents:
   - decoder/core-wazuh-message/0
 
 check:
